--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,3 +1,8 @@
+::selection {
+    background-color: #2a3647;
+    color: white; 
+}
+
 body {
     margin: 0;
     font-family: "Inter", sans-serif;
