--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+::selection {
+    background-color: #2a3647;
+    color: white; 
+}
+
 body {
     font-family: "inter", sans-serif;
     margin: 0;
