--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,3 +1,8 @@
+::selection {
+    background-color: #2a3647;
+    color: white; 
+}
+
 body {
     background-color: rgb(246, 247, 248) !important;
 }
