--- a/styles/help.css
+++ b/styles/help.css
@@ -55,6 +55,10 @@ img {
     cursor: pointer;
 }
 
+.d-none {
+    display: none !important;
+}
+
 @media(max-width: 1100px) {
     .main-help-container {
         margin-top: 120px;
