scrollbar and padding tassk

--- a/styles/board.css
+++ b/styles/board.css
@@ -534,13 +534,18 @@ body {
         display: none;
     }
 
-    .lineUp {
-        padding: 10px;
-        margin: -10px;
+    #divToDo,
+    #divInProgress,
+    #divAwaitFeedback,
+    #divDone {
         overflow: auto;
+        padding: 10px;
     }
 
-    .lineUp::-webkit-scrollbar {
+    #divToDo::-webkit-scrollbar,
+    #divInProgress::-webkit-scrollbar,
+    #divAwaitFeedback::-webkit-scrollbar,
+    #divDone::-webkit-scrollbar {
         display: none;
     }
 
