header fixed logo

--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,10 @@
     color: white; 
 }
 
+.d-none-header {
+    display: none;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
