--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
     <!-- hier beginnt die html des header -->
     <div id="header" class="header">
       <div class="header-container"">
-        <div class="logo-mobile d-none">
+        <div class="logo-mobile d-none-header">
           <img src="../img/join_logo.png" alt="logo"/>
         </div>
         <span class="title">Kanban Project Management Tool</span>
