--- a/styles/board.css
+++ b/styles/board.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: "Inter", sans-serif;
@@ -194,6 +198,7 @@ body {
     display: flex; 
     flex-direction: column;
     min-width: 246px; 
+    height: fit-content;
     border-radius: 24px; 
     padding: 24px;
     box-sizing: border-box;
