--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,10 @@ textarea {
     resize: none;
 }
 
+.zIndex101 {
+    z-index: 101;
+}
+
 /* ---------- BUTTONS ---------- */
 
 .darkBtn {
@@ -126,6 +130,14 @@ textarea {
 .darkBtn:hover {
     background-color: #29ABE2;
     box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.darkBtnWithoutHover {
+    background-color: #2A3647;
+    color: white;
+    padding: 12px 15px 12px 15px;
+    border: none;
+    border-radius: 7px;
 }
 
 .transparentBtn {
