--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -129,9 +129,6 @@ body {
     border-radius: 10px;
     padding: 12px 16px; 
     font-size: 16px;
-    background-image: url('../img/arrow_drop_down.png'); 
-    background-position: right 10px top 20px; 
-    background-repeat: no-repeat; 
     cursor: pointer;
     border: 1px solid rgba(168, 168, 168, 1);
     font-size: 20px;
@@ -140,6 +137,34 @@ body {
 .assignContact:focus-within {
     border: 1px solid #29abe2;
     outline: none;
+}
+
+.contactInput  {
+    display: flex;
+    align-items: center;
+}
+
+.categoryInput {
+    display: flex;
+    align-items: center;
+}
+
+.categoryInput img{
+    height: 6px;
+    object-fit: cover;
+    margin-left: -25px;
+    cursor:pointer;
+}
+.contactInput img {
+    height: 6px;
+    object-fit: cover;
+    margin-left: -25px;
+    cursor:pointer;
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease-in-out; /* Smooth transition */
 }
 
 .contacts-dropdown {
