--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -401,14 +401,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: 400;
     color: black;
     cursor: pointer;
-    box-sizing: border-box;
-    
+    box-sizing: border-box; 
 }
 
 .subtask-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.subtask-wrapper:hover {
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 #subtasks:focus-within {
@@ -566,6 +571,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 10px; /* Your preference */
     cursor: pointer; /* Indicate clickable options */
     /* Additional styling here to match the contacts dropdown */
+  }
+
+  .category-option:hover {
+    background-color: rgb(0, 0, 0, 0.1);
   }
   
   /* Style for the input field */
