--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -155,10 +155,15 @@ body {
 }
 
 #plus {
-    
     object-fit: cover;
     margin-left: -25px;
-    cursor:pointer;
+    cursor: pointer;
+    border-radius: 100%;
+    padding: 2px;
+}
+
+#plus:hover {
+    background-color: rgb(0, 0, 0, 0.1);
 }
 
 .categoryInput img{
@@ -166,12 +171,25 @@ body {
     object-fit: cover;
     margin-left: -25px;
     cursor:pointer;
+    border-radius: 10px;
+    padding: 5px;
 }
+
 .contactInput img {
     height: 6px;
     object-fit: cover;
     margin-left: -25px;
     cursor:pointer;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.contactInput img:hover {
+    background-color: rgb(0, 0, 0, 0.1);
+}
+
+.categoryInput img:hover {
+    background-color: rgb(0, 0, 0, 0.1);
 }
 
 .rotate-180 {
