--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
-    <script src="./js/register.js" defer></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="/js/navBar.js" defer></script>
     <script src ="../js/addTask.js" defer></script>
