--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
   <body>
     <!-- hier beginnt die html des header -->
     <div id="header" class="header">
-      <div class="header-container"">
+      <div class="header-container">
         <div class="logo-mobile d-none-header">
           <img src="../img/join_logo.png" alt="logo"/>
         </div>
