--- a/styles/storage.css
+++ b/styles/storage.css
@@ -3,7 +3,7 @@
     top: 20px;
     z-index: 1000;
     text-align: center;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -14,7 +14,7 @@
     background-color: #2a3647;
     height: 40px;
     border-radius: 20px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     padding: 10px;
@@ -33,7 +33,7 @@
     top: 20px;
     z-index: 1000;
     text-align: center;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     width: 100%;
