--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -631,6 +631,30 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     bottom: 50%;
 }
 
+.addTaskSubtasksOverDiv {
+    width: 440px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.addTaskSubtasksInput {
+    height: 48px;
+    width: 100%;
+    padding: 12px 16px;
+    font-size: 20px;
+    border: 1px solid rgba(168, 168, 168, 1);
+    border-radius: 10px;
+    cursor: pointer;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.addTaskSubtasksInput:focus {
+    border: 1px solid #29abe2;
+}
+
 @media(max-width: 1300px) {
     .main-add-task-container {
         align-items: center;
