--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -78,14 +78,14 @@
             </div> -->
 
             <div class="dFlex directionColumn width100Perc addTaskSubtasksOverDiv">
-                <label for="addTaskPopUpInputSubtasks" class="padBot5">Subtasks</label>
+                <label for="addTaskPopUpInputSubtasks" class="padBot5 fontSize20">Subtasks</label>
                 <div class="posRelative cursorPointer">
-                    <input placeholder="Add new subtask" id="addTaskPopUpInputSubtasks" onkeydown="addTaskaddSubtaskOnEnter(event)" class="addTaskSubtasksInput inputBoardEdit width100Perc focusBlueBorder" type="text">
-                    <div id="addTaskPopUpInputSubtasksImg" class="posAbsolute dFlex justCenter alignCenter height48 width48 rightMinus26 top0 right0">
+                    <input placeholder="Add new subtask" id="addTaskInputSubtasks" onkeydown="addTaskaddSubtaskOnEnter(event)" class="addTaskSubtasksInput inputBoardEdit width100Perc focusBlueBorder" type="text">
+                    <div id="addTaskInputSubtasksImg" class="posAbsolute dFlex justCenter alignCenter height48 width48 rightMinus26 top0 right0">
                         <img onclick="addTaskfocusOnInputOrAddSubtask('${task.createdAt}')" class="height16" src="./img/add-2.png" alt="plus">
                     </div>
                 </div>
-                <div class="dFlex directionColumn gap5 padTop5" id="boardPopUpAllSubtasks"></div>
+                <div class="dFlex directionColumn gap5 padTop5 overflowY maxHeight90" id="addTaskAllSubtasks"></div>
             </div>
 
             </div>
