addTask and editTask subtasks ready

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,10 @@ body {
     position: relative;
 }
 
+.overflowHidden {
+    overflow: hidden;
+}
+
 /* ---------- DISPLAY ---------- */
 
 .d-none {
