--- a/styles/board.css
+++ b/styles/board.css
@@ -452,6 +452,8 @@ body {
 .addTaskTemplateRequiredCreate {
     margin-left: 0 !important;
     margin-right: 0 !important;
+    margin-bottom: 0 !important;
+    margin-top: 20px !important;
 }
 
 .addTaskTemplateTaskMar25 {
