--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -69,17 +69,9 @@
                     <div id="categoryDropdown" class="category-dropdown"></div>
                 </div>
             </div>
-          
-            <!-- Subtasks -->
-            <!-- <div class="subtasks">
-              <p>Subtasks</p>
-              <div class="subtasksInput"><input id="subtasks" type="text" placeholder="Add new subtask"><img id="plus" src="./img/add-2.png"></div>
-              <div class="subList"><ul id="subtasksList"></ul></div>
-            </div> -->
-
             <div class="dFlex directionColumn width100Perc addTaskSubtasksOverDiv">
                 <label for="addTaskPopUpInputSubtasks" class="padBot5 fontSize20">Subtasks</label>
-                <div class="posRelative cursorPointer">
+                <div class="posRelative cursorPointer" id="addTaskInputSubtasksParent">
                     <input placeholder="Add new subtask" id="addTaskInputSubtasks" onkeydown="addTaskaddSubtaskOnEnter(event)" class="addTaskSubtasksInput inputBoardEdit width100Perc focusBlueBorder" type="text">
                     <div id="addTaskInputSubtasksImg" class="posAbsolute dFlex justCenter alignCenter height48 width48 rightMinus26 top0 right0">
                         <img onclick="addTaskfocusOnInputOrAddSubtask('${task.createdAt}')" class="height16" src="./img/add-2.png" alt="plus">
