--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="dFlex directionColumn width100Perc addTaskSubtasksOverDiv">
-                <label for="addTaskPopUpInputSubtasks" class="padBot5 fontSize20">Subtasks</label>
+                <div class="padBot5 fontSize20">Subtasks</div>
                 <div class="posRelative cursorPointer" id="addTaskInputSubtasksParent">
                     <input placeholder="Add new subtask" id="addTaskInputSubtasks" onkeydown="addTaskaddSubtaskOnEnter(event)" class="addTaskSubtasksInput inputBoardEdit width100Perc focusBlueBorder" type="text">
                     <div id="addTaskInputSubtasksImg" class="posAbsolute dFlex justCenter alignCenter height48 width48 rightMinus26 top0 right0">
