--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -13,7 +13,9 @@
     <script src="./js/register/designRegister.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="/js/navBar.js" defer></script>
-    <script src ="../js/addTask.js" defer></script>
+    <script src ="../js/addTask/addTaskArrays.js" defer></script>
+    <script src ="../js/addTask/addTaskForm.js" defer></script>
+    <script src ="../js/addTask/subtask.js" defer></script>
     <script src="js/header.js" defer></script>
 </head>
 <body onload="init(), includeHTML()">
