--- a/styles/board.css
+++ b/styles/board.css
@@ -481,6 +481,10 @@ body {
     font-size: 14px;
 }
 
+.wordBreakBreakAll {
+    word-break: break-all;
+}
+
 .animationRightSlideOut {
     animation: rightSlideOut 225ms forwards !important;
 }
