board height drag and drop fix

--- a/styles/board.css
+++ b/styles/board.css
@@ -182,6 +182,11 @@ body {
 }
 .lineUp {
     min-width: 244px;
+    height: 100%;
+}
+
+.lineUpHeight {
+    min-height: 300% !important;
 }
 
 .toDoColumn {
