--- a/styles/index.css
+++ b/styles/index.css
@@ -536,6 +536,16 @@ h1 {
     }
 }
 
+@media (max-width: 740px) { 
+    @media (max-height: 740px) {
+        .registerJoinLogo {
+            width: 38px;
+            left: 30px;
+            top: 30px;
+        }
+    }
+}
+
 @media (max-width: 550px) {
     .formLogIn {
         padding: 40px;
