--- a/styles/board.css
+++ b/styles/board.css
@@ -191,11 +191,18 @@ body {
 }
 
 .more-contacts-remaining {
+    font-size: 12px;
+    color: white;
+    border: 1px solid white;
+    margin: -3px;
+    padding: 3px;
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    color: rgb(42, 54, 71);
-    padding-left: 10px;
+    justify-content: center;
+    background-color: lightgray;
 }
 
 .toDoColumn {
