--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -50,7 +50,7 @@
             <!-- Due Date -->
             <div class="deadline">
               <p>Due Date<span class="red">*</span></p>
-              <input required id="due" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" placeholder="dd/mm/yyyy" class="inputBoardEdit width100PercMinus26Px focusBlueBorder addTaskOverlayDateInput" type="text">
+              <input class="custom-date-input" required id="due" placeholder="dd/mm/yyyy" class="inputBoardEdit width100PercMinus26Px focusBlueBorder addTaskOverlayDateInput" type="date">
             </div>
           
             <!-- Priority -->
