better drag and drop on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,10 @@ body {
     overflow: hidden;
 }
 
+.pointerEventsNone {
+    pointer-events: none;
+}
+
 /* ---------- DISPLAY ---------- */
 
 .d-none {
